src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Primary_Student_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Student Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Primary Student Organization)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Seminary_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Seminary Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_to_Banner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Contact to Banner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UDCID__c</fullName>
        <label>UDCID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Parent_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Undergraduate Parent Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Undergraduate Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Type_Code__c</fullName>
        <description>The Intended Visa status if person is not a Not Citizen or Permanent Resident</description>
        <inlineHelpText>The Intended Visa status if person is not a Not Citizen or Permanent Resident</inlineHelpText>
        <label>Visa Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AS - Aslyum granted</fullName>
                </value>
                <value>
                    <fullName>AS - Asylum granted</fullName>
                </value>
                <value>
                    <fullName>AS - Asylum granted; B2 - Tourist</fullName>
                    <isActive>false</isActive>
                    <label>AS - Asylum granted; B2 - Tourist</label>
                </value>
                <value>
                    <fullName>B-2</fullName>
                </value>
                <value>
                    <fullName>B2 - Tourist</fullName>
                </value>
                <value>
                    <fullName>F1 - Student</fullName>
                </value>
                <value>
                    <fullName>F-1 Student</fullName>
                </value>
                <value>
                    <fullName>F-2</fullName>
                </value>
                <value>
                    <fullName>H1 - Special employee</fullName>
                </value>
                <value>
                    <fullName>H4 - Spouse of employee</fullName>
                </value>
                <value>
                    <fullName>I-94 Refugee</fullName>
                </value>
                <value>
                    <fullName>J1 - Exchange scholar</fullName>
                </value>
                <value>
                    <fullName>J2 - Dependent of exchange scholar</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>R-2</fullName>
                </value>
                <value>
                    <fullName>Refugee</fullName>
                </value>
                <value>
                    <fullName>TP - Temporary protection status</fullName>
                </value>
                <value>
                    <fullName>Undocumented</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warning_Description__c</fullName>
        <description>Information about any warnings that need to be reviewed before acceptance.</description>
        <label>Warning Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Warning_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked to indicate that there is some information that needs to be reviewed before being accepted.</description>
        <label>Warning Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warning_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the warnings for this Contact have been reviewed and it is okay to Accept Opportunities.</description>
        <label>Warning Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__AlternateEmail__c</fullName>
        <description>Alternate Email is an optional email not captured in other email fields.</description>
        <inlineHelpText>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</inlineHelpText>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>hed__Chosen_Full_Name__c</fullName>
        <description>The full name that the Contact prefers to use instead of a legal or official name.</description>
        <inlineHelpText>The full name that the Contact prefers to use instead of a legal or official name.</inlineHelpText>
        <label>Chosen Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Citizenship__c</fullName>
        <label>Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas (the)</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia (Plurinational State of)</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Country_of_Origin__c</fullName>
        <label>Country of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas (the)</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia (Plurinational State of)</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Current_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current Address that the Contact&apos;s mailing fields are filled with.</description>
        <inlineHelpText>The current Address that the Contact&apos;s mailing fields are filled with.</inlineHelpText>
        <label>Current Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>hed__Address__c.hed__Parent_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>To see all addresses for the Contact&apos;s household, enter A-* in the search window</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>hed__Address__c</referenceTo>
        <relationshipLabel>Contacts (Current Address)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this option marks the contact as deceased, and excludes them from household naming, emails, and phone calls.</description>
        <inlineHelpText>When selected, this option marks the contact as deceased, and excludes them from household naming, emails, and phone calls.</inlineHelpText>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this option excludes the contact from emails and phone calls.</description>
        <inlineHelpText>When selected, this option excludes the contact from emails and phone calls.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Dual_Citizenship__c</fullName>
        <description>A field to store a secondary citizenship or dual nationality</description>
        <inlineHelpText>If this Contact has multiple citizenship it can be recorded here.</inlineHelpText>
        <label>Dual Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas (the)</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia (Plurinational State of)</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Caucasian</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Exclude_from_Household_Formal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will exclude this contact from the Household Formal Greeting.</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Formal Greeting.</inlineHelpText>
        <label>Exclude from Household Formal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Exclude_from_Household_Informal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will exclude this contact from the Household Informal Greeting.</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Informal Greeting.</inlineHelpText>
        <label>Exclude from Household Informal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Exclude_from_Household_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will exclude this contact from the Household Name.</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Name.</inlineHelpText>
        <label>Exclude from Household Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__FERPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FERPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Financial_Aid_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Aid Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__HIPAA_Detail__c</fullName>
        <label>HIPAA Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>hed__HIPAA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HIPAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Military_Background__c</fullName>
        <label>Military Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__Military_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Military Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Naming_Exclusions__c</fullName>
        <inlineHelpText>Determines which household names this contact is NOT included as part of.</inlineHelpText>
        <label>Naming Exclusions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Household__c.Name</fullName>
                </value>
                <value>
                    <fullName>Household__c.Formal_Greeting__c</fullName>
                </value>
                <value>
                    <fullName>Household__c.Informal_Greeting__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__PreferredPhone__c</fullName>
        <description>Which phone number should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which phone number should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Preferred_Email__c</fullName>
        <description>Which email should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which email should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Email</fullName>
                </value>
                <value>
                    <fullName>Secondary Email</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Primary_Address_Type__c</fullName>
        <description>Which type of address is the mailing address?</description>
        <inlineHelpText>Which type of address is the mailing address?</inlineHelpText>
        <label>Primary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Primary_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Primary Household)</relationshipLabel>
        <relationshipName>Household_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Primary_Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The language the Contact prefers to use.</description>
        <inlineHelpText>The language the Contact prefers to use.</inlineHelpText>
        <label>Primary Language</label>
        <referenceTo>hed__Language__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Primary_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Business Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Primary Organization)</relationshipLabel>
        <relationshipName>Organization_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Race__c</fullName>
        <label>Race</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Religion__c</fullName>
        <label>Religion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atheist</fullName>
                </value>
                <value>
                    <fullName>Buddhist</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Hindu</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Muslim</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Secondary_Address_Type__c</fullName>
        <description>What type of address is the other address?</description>
        <inlineHelpText>What type of address is the other address?</inlineHelpText>
        <label>Secondary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>12</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>hed__UniversityEmail__c</fullName>
        <description>Official University email address.</description>
        <inlineHelpText>Official University email address.</inlineHelpText>
        <label>University Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>hed__WorkEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <inlineHelpText>See Preferred Email field.</inlineHelpText>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>hed__WorkPhone__c</fullName>
        <description>See &apos;Preferred Phone&apos; field.</description>
        <inlineHelpText>See &apos;Preferred Phone&apos; field.</inlineHelpText>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>hed__Work_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</description>
        <formula>if(
    ISPICKVAL(hed__Primary_Address_Type__c,&quot;Work&quot;),
    if(ISBLANK(MailingStreet) , &quot;&quot; , MailingStreet &amp; &quot;, &quot;) &amp; 
    if(ISBLANK(MailingCity) , &quot;&quot; , MailingCity &amp; &quot;, &quot;) &amp; 
    if(ISBLANK(MailingState) , &quot;&quot; , MailingState &amp; &quot; &quot;) &amp; 
    if(ISBLANK(MailingPostalCode) , &quot;&quot; , MailingPostalCode) &amp; 
    If(ISBLANK(MailingCountry ) , &quot;&quot; , &quot;, &quot; &amp; MailingCountry)
    ,
    if(ISPICKVAL(hed__Secondary_Address_Type__c,&quot;Work&quot;),
    if(ISBLANK(OtherStreet) , &quot;&quot; , OtherStreet &amp; &quot;, &quot;) &amp; 
    if(ISBLANK(OtherCity) , &quot;&quot; , OtherCity &amp; &quot;, &quot;) &amp; 
    if(ISBLANK(OtherState) , &quot;&quot; , OtherState &amp; &quot; &quot;) &amp; 
    if(ISBLANK(OtherPostalCode) , &quot;&quot; , OtherPostalCode) &amp; 
    If(ISBLANK(OtherCountry ) , &quot;&quot; , &quot;, &quot; &amp; OtherCountry)
    ,
    &quot;&quot;)
)</formula>
        <inlineHelpText>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</inlineHelpText>
        <label>Work Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__is_Address_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Contact&apos;s Current address overrides any new or seasonal address. (Applies to Household Contacts only.)</description>
        <inlineHelpText>If checked, the Contact&apos;s Current Address lookup overrides the Household&apos;s default Address or seasonal Address.</inlineHelpText>
        <label>Do Not Automatically Update</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Social_Security_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
OR(
ISBLANK(hed__Social_Security_Number__c),
REGEX(hed__Social_Security_Number__c, &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>hed__Social_Security_Number__c</errorDisplayField>
        <errorMessage>Social Security number is not in a valid XXX-XX-XXXX format</errorMessage>
    </validationRules>
</CustomObject>